--- a/RPGVXAcecn/rpgvxace/3230_db_skill.html
+++ b/RPGVXAcecn/rpgvxace/3230_db_skill.html
@@ -68,50 +68,50 @@
   <p>选择技能可以使用的场合。选择以下的任意一项：[随时可用]（战斗中，菜单中皆可使用）、[仅战斗中]（仅战斗中可以使用）、[仅菜单中]（仅菜单中可以使用）</p>
 </dd>
 
-<dt>●速度補正</dt>
+<dt>●速度修正</dt>
 <dd>
-  <p>スキルの実行時に敏捷性に加算する値（-2000〜2000）です。バトル中の行動順序の判定に影響し、“効果は小さいがすばやく発動できる”、“効果は大きいが発動に時間がかかる”といった特徴を表現できます。</p>
+  <p>技能发动时加在敏捷上的数值（-2000~2000）。影响战斗中行动顺序的判定，可以体现出“效果不大但可以迅速发动的技能”以及“效果显著但发动需要时间”的特征。</p>
 </dd>
 
-<dt>●成功率</dt>
-<dd><p>使用すること自体の成功確率（0〜100％）です。実際の成功率は、相手の有効度が影響します。</p></dd>
+<dt>●成功几率</dt>
+<dd><p>使用技能的成功几率（0~100%）。实际成功率还受到对方有效度的影响。</p></dd>
 
-<dt>●連続回数</dt>
-<dd><p>1度の使用で効果を及ぼす回数（1〜9）です。</p></dd>
+<dt>●连续次数</dt>
+<dd><p>一次使用产生效果的次数（1~9）</p></dd>
 
-<dt>●得TP</dt>
-<dd><p>発動に成功し、相手に効果を与えたときに得られるTP（0〜100）です。</p></dd>
+<dt>●获取特技值</dt>
+<dd><p>成功发动并产生效果时使用者获取的TP（0~100）。</p></dd>
 
-<dt>●命中タイプ</dt>
-<dd><p>命中判定の種別です。以下からひとつ指定します。</p></dd>
+<dt>●命中类型</dt>
+<dd><p>命中判定的类型。从下面三项中指定一项。</p></dd>
 </dl>
 
 <dl><dd><dl>
-<dt>必中</dt>
-<dd><p>スキルの発動が成功した時点で必中（必ず命中）したものとみなします。反撃、魔法反射、身代わりは無効です。</p></dd>
+<dt>必定命中</dt>
+<dd><p>只要技能发动成功就视为必中（必定命中）。反击、魔法反射、保护弱者都对该技能无效。</p></dd>
 
-<dt>物理攻撃</dt>
-<dd><p>使用者の命中率、対象者の回避率をもとに判定します。反撃、身代わりの対象になります。</p></dd>
+<dt>物理攻击</dt>
+<dd><p>以使用者的命中率，目标的回避率为基准进行判定。会引发反击、保护弱者。</p></dd>
 
-<dt>魔法攻撃</dt>
-<dd><p>対象者の魔法回避率をもとに判定します。魔法反射、身代わりの対象になります。</p></dd>
+<dt>魔法攻击</dt>
+<dd><p>以目标的魔法闪避率为基准进行判定。会引发魔法反射、保护弱者。</p></dd>
 </dl></dd></dl>
 
 <dl>
-<dt>●アニメーション</dt>
-<dd><p>バトル中、使用対象に表示するアニメーションです。</p></dd>
+<dt>●动画</dt>
+<dd><p>战斗中显示在使用对象上的动画。</p></dd>
 
-<dt>●使用時メッセージ</dt>
-<dd><p>バトル中、スキルを使うときに表示するメッセージの定型文（2行まで）を指定します。［〜を唱えた］［〜を放った］［〜を使った］のボタンを押すと、それぞれの定型文を入力できます。</p></dd>
+<dt>●使用时的信息</dt>
+<dd><p>指定战斗中使用技能时显示的格式信息（至多两行）。按下[咏唱了~][施放了~][使用了~]按钮，可以直接输入对应的格式文字。</p></dd>
 
-<dt>●武器タイプ1／武器タイプ2</dt>
+<dt>●武器类型1/武器类型2</dt>
 <dd>
-  <p>スキル使用条件として装備が必要な武器です。2つの欄にそれぞれ武器のタイプを指定します。どちらも［なし］の場合はスキルを無条件で使えます。2種類設定した場合は、どちらかのタイプの武器を装備している場合に使えます。</p>
+  <p>使用技能必须要装备的武器，作为技能的使用条件。两栏中分别指定一种武器类型。两边都设为[无]的情况下技能可以无条件使用。两种都设定的情况下，只要装备任意一种武器即可使用。</p>
 </dd>
 
-<dt>●ダメージ</dt>
+<dt>●伤害</dt>
 <dd>
-  <p>相手にダメージを与える効果を持たせる場合、そのタイプや効果量の計算式を指定します。</p>
+  <p>技能拥有给予对方伤害的效果时，在此指定伤害类型和计算公式。</p>
 </dd>
 
 <dl><dd><dl>
