change some translations

--- a/RPGVXAcecn/rpgvxace/3240_db_item.html
+++ b/RPGVXAcecn/rpgvxace/3240_db_item.html
@@ -18,10 +18,10 @@
 <div align="center"><img src="img/3240_01.png" alt="アイテム"></div>
 <dl>
 <dt>●名称</dt>
-<dd><p>道具的名称。名称过长可能导致游戏画面里写不下。</p></dd>
+<dd><p>道具的名称。名称过长有可能会导致游戏画面里写不下。</p></dd>
 
 <dt>●图标</dt>
-<dd><p>游戏中附在技能名称旁边的图像。双击此处可以打开[图标]窗口，在其中指定一张图片。</p></dd>
+<dd><p>游戏中附在技能名称旁边的图像。双击此处可以打开[图标]窗口并在其中指定图片。</p></dd>
 
 <dt>●说明</dt>
 <dd><p>游戏画面中选择道具时的说明。</p></dd>
