--- a/RPGVXAcecn/intro/101_start.html
+++ b/RPGVXAcecn/intro/101_start.html
@@ -12,7 +12,7 @@
 <ul>
   <li><a href="#project">建立项目</a></li>
   <li><a href="#section">建立脚本</a></li>
-  <li><a href="#stop">结束程序</a></li>
+  <li><a href="#stop">停止程序</a></li>
   <li><a href="#comment">注释</a></li>
   <li><a href="#comment_out">临时注释</a></li>
   <li><a href="#syntax">语法和库</a></li>
@@ -29,7 +29,7 @@
 <p>建立项目后，在主选单&rarr;「工具」中选择「脚本编辑器」。</p>
 <p>显示脚本编辑器对话框后，在最上面新建一个脚本页。点击右键，在弹出菜单中选择「插入空白脚本页」，就建立了一个新的空白脚本页。</p>
 <p>脚本页的名称是什么无所谓，可以取个容易理解的，我们这里暂命名为「TEST」。脚本页名称的输入在窗口左下方的「脚本页名称」里进行。</p>
-<h2><a name="stop">结束程序</a></h2>
+<h2><a name="stop">停止程序</a></h2>
 <p>首先，请输入下面的代码。</p>
 <pre>rgss_stop<br></pre>
 <img src="img/image2.png" alt="プログラムの停止" class="float_r">
@@ -39,16 +39,16 @@
 <h2><a name="comment">注释</a></h2>
 <p>在 Ruby 中，# 符号后面的一整行文字会认定为<strong>注释</strong>。</p>
 <p># 后的注释代码不会执行，不会影响到程序的运作，只作为编写者标记的备忘记录来使用。</p>
-<pre>exit    # 结束程序<br></pre>
+<pre>rgss_stop    # 停止程序<br></pre>
 <p>这和事件指令的「注释」功能相同，是记录程序处理内容的简单说明，使用注释会很容易知道这段脚本是做什么的。即使是自己编写的程序，但时间一长，该段内容是指定做什么处理也会忘记。在脚本的学习和实际操作时，推荐注意多使用注释功能。</p>
 <p>还有，作为程序的说明，在后面的学习中脚本会写有很多的注释。但实际操作中没有必要完全仿效其注释的内容。#
 以后的文字，可以按实际中最容易理解的说明注释。</p>
 <h2><a name="comment_out">临时注释</a></h2>
 <p>并不是对脚本内容的注释，而是对程序的某个部分使其暂时不运行的功能</p>
 <p>在刚才的那行脚本前 按 Ctrl+Q 试试。</p>
-<pre>#~ exit    # 结束程序<br></pre>
+<pre>#~ rgss_stop    # 结束程序<br></pre>
 <p>会变成上面的那样。再按一次就会复原。</p>
-<p>正如所见、exit
+<p>正如所见、rgss_stop
 这条命令变成了注释，并没有被执行。在找bug的时候，不想消除这段程序，但是也不想让它执行的时候使用。这个就叫做<strong>临时注释</strong>。</p>
 <p>#~ 这个记号虽然在 Ruby 中并没有，但是作为<strong>临时注释</strong>的标志来使用。在选择很多行的时候按下 Ctrl+Q
 ，可以对所有选择的部分进行<strong>临时注释</strong>和解除操作。</p>
