--- a/RPGVXAcecn/intro/111_hash.html
+++ b/RPGVXAcecn/intro/111_hash.html
@@ -14,9 +14,9 @@
   <li><a href="#manage">哈希表的操作</a></li>
   <li><a href="#loop">哈希表的循环</a></li>
 </ul>
-<p><strong>哈希表</strong>是一种和数组比较类似的数据构造形式。</p>
+<p><strong>哈希表</strong>是一种和数组比较类似的数据结构。</p>
 <h2><a name="generate">哈希表的生成</a></h2>
-<p>哈希表也称为关联数组。和数组不同的是，作为取出数值 的<strong>主键</strong>（相当于数组的附加码），可以使用任意的对象。 在 {}
+<p>哈希表也称为关联数组。和数组不同的是，作为取出数值 的<strong>主键</strong>（相当于数组的下标），可以使用任意的对象。 在 {}
   符号中间排列多个单元就生成了一个哈希表。</p>
 <pre>a = {"阿莱库斯"=&gt;2000, "杰克"=&gt;2003}<br></pre>
 <p>这个例子中，"阿莱库斯" 和 "杰克" 就是取出数值的主 键，2000 和 2003 就是实际的数值。这样， 使用 =&gt; 符号把主键和数值连接起来就形成了
@@ -29,33 +29,61 @@
 在有很多编号单元的情况下使用哈希表会比使用数组更加方便。</p>
 <p>另外，哈希表的反操作，也就是「检查与数值对应的主键」的情况下，
 在 [] 中写入数值是不能得到其主键的。这里不再多作陈述，
-该种操作方法我们会在后面特别介绍。</p>
+要进行这种操作用到的是另一个方法</p>
 <h2><a name="add">哈希表数值的添加</a></h2>
 <p>实际操作中，哈希表可以在程序中直接指定数据建立， 亦可以使用先建立一个空的 哈希表然后向其中添加单元数据等多种方法生成。 生成一个空的 哈希
   表只需写入 {} 就行了。</p>
 <pre>a = {}<br></pre>
-<p>向 哈希表中添加数值，和数组单元的重赋值完全相同。</p>
+<p>向哈希表中添加数值，和数组元素的赋值完全相同。</p>
 <pre>a = {}<br>a["阿莱库斯"] = 2000<br><br>p a                 # =&gt; {"阿莱库斯"=&gt;2000}<br></pre>
 <h2><a name="manage">哈希表的操作</a></h2>
-<p>哈希表是 <a href="../rgss/sc_hash.html">哈希</a>类的对象。 同数组一样，可以调用这个类定义的方法对数据进行操作。</p>
-<p>比如要从 哈希表中删除数值的话，就要使用 delete 方法。</p>
+<p>哈希表是 <a href="../rgss/sc_hash.html">Hash</a>类的对象。 同数组一样，可以调用这个类定义的方法对数据进行操作。</p>
+<p>比如要从哈希表中删除数值的话，就要使用 delete 方法。</p>
 <pre>a = {"阿莱库斯"=&gt;2000, "杰克"=&gt;2003}<br>a.delete("杰克")<br><br>p a                 # =&gt; {"阿莱库斯"=&gt;2000}<br></pre>
-<p>想知道 哈希表中是否含有某个特定主键的情况下，就要使用 include? 方法。</p>
+<p>想知道哈希表中是否含有某个特定主键的情况下，就要使用 include? 方法。</p>
 <pre>a = {"阿莱库斯"=&gt;2000, "杰克"=&gt;2003}<br><br>p a.include?("阿莱库斯")    # =&gt; true<br>p a.include?("小白兔")      # =&gt; false<br></pre>
 <p>第三行中使用 include? 方法，是确认哈希表中是否含有主键 "阿莱库斯"。
 上例在第一行生成哈希表时主键设定有 "阿莱库斯"，所以输出结果为 true（真）。
 同样第四行是确认哈希表中是否含有主键 "小白兔"。
 然而这个主键在哈希表中是不存在的，所以输出结果就为 false（伪）。</p>
 <h2><a name="loop">哈希表的循环</a></h2>
-<p>在哈希类中，有取得全部主键排列的 keys 方法。</p>
-<pre>a = {3=&gt;6, 4=&gt;10, 5=&gt;15}<br>p a.keys            # =&gt; [5, 3, 4]<br></pre>
-<p>这样，=&gt; 左侧的主键会全部排列出来。 但 哈希表中是没有顺序的，所以排列会无顺序可言。</p>
-<p>前节中，我们学习了使用 for 循环指定数组的方法。 现在让我们来用 for 循环指定 keys 方法的返回值，作成 哈希表主键的循环吧。</p>
-<pre>a = {3=&gt;6, 4=&gt;10, 5=&gt;15}<br><br>for k in a.keys<br>  p k<br>end<br></pre>
-<p>运行上例就会按不同顺序显示 3、4、5。</p>
-<p>而且，使用 values 方法的话，还能取得 哈希表全部数值的排列。</p>
-<pre>a = {3=&gt;6, 4=&gt;10, 5=&gt;15}<br><br>for v in a.values<br>  p v<br>end<br></pre>
-<p>运行上例就会按不同顺序显示 6、10、15。</p>
+<p>在哈希类中，有取得全部主键构成的数组的 keys 方法。</p>
+<pre>
+a = {3=&gt;6, 4=&gt;10, 5=&gt;15}
+p a.keys            # => [3, 4, 5]
+</pre>
+<p>这样就会输出 =&gt; 左侧的主键构成的数组。</p>
+<p>前一章<a href="110_array.html">数组</a>的最后使用了<strong
+>迭代器</strong>，我们使用这个来对哈希表的主键进行循环。</p>
+<pre>
+a = {3=&gt;6, 4=&gt;10, 5=&gt;15}
+
+a.keys.each do |k|
+  p k
+end
+</pre>
+<p>执行这段代码会输出 3, 4, 5。</p>
+<p>此外，使用 values 方法可以获得哈希表的值构成的数组。</p>
+<pre>
+a = {3=&gt;6, 4=&gt;10, 5=&gt;15}
+
+a.values.each do |v|
+  p v
+end
+</pre>
+<p>执行这段代码会输出 6, 10, 15。</p>
+<p>此外，旧版本的 Ruby 哈希表的存储顺序是不确定的。但 RGSS3 使用的 Ruby 1.9 开始确保了哈希表的顺序。</p>
+<pre>
+a = {3=&gt;6, 5=&gt;15, 4=&gt;10}
+
+a.keys.each do |k|
+  p k
+end
+</pre>
+<p>像这样更改了输入顺序，输出的顺序也会变为 3, 5, 4。</p>
+
+
 <h6></h6>
+
 </body>
 </html>
