--- a/RPGVXAcecn/intro/108_object.html
+++ b/RPGVXAcecn/intro/108_object.html
@@ -21,32 +21,29 @@
 <p>而对象的种类就称为<strong>类</strong>。比如字符串对象是属于 String 类，
 范围对象是属于 Range 类。关于 Ruby 中所有类的详细介绍，
 见 <a href="../rgss/index.html">RGSS 参考</a> 中
-的 <a href="../rgss/s_classes.html">内部类</a> 部分。</p>
+的 <a href="../rgss/s_classes.html">内置类</a> 部分。</p>
 <p>要强调特定类所属的对象，有时使用<strong>实例</strong>这种说法。
-所谓类可以说是其所属对象的描述。大的设计方案都有很多类，决定对象的动作。 对象必定是属于哪个类的。因此，「属于这个类的对象」也可以说成是「这个类的实例」。</p>
+所谓类可以说是其所属对象的描述。大的设计方案都有很多类，决定对象的行为。 对象必定是属于哪个类的。因此，「属于这个类的对象」也可以说成是「这个类的实例」。</p>
 <h2><a name="method">方法</a></h2>
 <p>尝试着看看 <a href="../rgss/sc_string.html">String</a> 类的部分吧。
 现在或许不太了解其中的意思，但不用太介意。
-实际中自已编写脚本时将会经常参照这个参考，有必要提早有所了解。</p>
+实际中自已编写脚本时将会经常参照这个参考，有必要尽快习惯。</p>
 <p>看到<strong>方法</strong>栏下方列出的项目了吧。
 这些就是该类所属对象专用的函数即方法。</p>
 <p>方法列表中有个名称为 size 的项目。使用这个看看吧。</p>
 <pre>a = "Ruby"<br><br>p a.size        # =&gt; 4<br></pre>
-<p>String 类的 size 方法，是返回字符串字节数的方法。
-这里所说的「字节」指的是容量的意思。比如半角英文字母 1 个字符
-就是 1 个字节。"Ruby" 这个字符串是由 4 个字母组成所以返回的字
-节数就是 4（顺便说一下，全角的 1 个字符等于 3 个字节。在中国使用的是 gb2312 文字编
-码其 1 个全角字符等于 2 个字节，而 RGSS 使用的是 UTF-8 文字编码）。</p>
+<p>String 类的 size 方法，是返回字符串字符数的方法。&quot;Ruby&quot; 这个字符串有四个字符，因此方法返回了数字 4。（从 Ruby 1.9 起，全角字符也算作一个字符）
+</p>
 <p>再来试试这个吧。把字符串转换为大写字母的 upcase 方法。</p>
 <pre>a = "Ruby"<br><br>p a.upcase      # =&gt; "RUBY"<br></pre>
 <p>上面示例中，调用对象的方法时于变量名称后面会加上符号「.」，
-在其后面记述要调用的方法。而操作的对象称为<strong>作用实例</strong>。
-这里 a.upcase 中的 a 就是作用实例。</p>
+在其后面记述要调用的方法。而操作的对象称为<strong>接收者</strong>。
+这里 a.upcase 中的 a 就是接收者。</p>
 <p>但是，对字符串以外的对象调用 String 类的方法比如 upcase 方法的话会怎样呢？</p>
 <pre>a = 3<br><br>p a.upcase      # ERROR!!<br></pre>
-<p>这样会出现错误。因为 3 是一个整数对象属于 Fixnum 类，
-而 upcase 在 Fixnum 类的方法中没有定义。</p>
-<p>还有，没有必要完全记住这些方法的名称。
+<p>这样会出现错误。因为 3 是一个整数，
+没有定义 upcase 方法。</p>
+<p>还有，没有必要记住这些方法的名称。
 在对字符串进行某些操作时要使用 String 类的方法，
 直接打开 RGSS 参考文件进行查找会十分方便。使用方法的次数多了，
 自然就会记住它们。</p>
@@ -69,12 +66,13 @@
 也同样继承了超类的方法。当然，继承的还包括 Integer 类的父
 类 <a href="../rgss/sc_numeric.html">Numeric</a> 类，以及 Numeric 类的父
 类 <a href="../rgss/sc_object.html">Object</a> 类中定义的方法，Fixnum 类的实例都可以使用。</p>
-<p>看到这里也许有人会问，为何要特意把这些类给分开呢？回答会有一点困难，
-继承的意思，是保持被继承者的性质但却同时拥有自己独有的特性。
+<p>看到这里也许有人会问，为何要特意把这些类给分开呢？回答会有一点困难：
+继承的意义在于，不同的类共享同一种行为。
 比如，浮点数是 <a href="../rgss/sc_float.html">Float</a> 类的实例，
 这个类是从 Numeric 类中继承而来的。整数和浮点数的性质是不相同的，
 然而无论哪个都是表示「数字」这个概念却是共同的，
 所以在 Numeric 类中定义共同的部分而不用在各个子类中重复定义。</p>
+<p>用 RM 的概念来说的话，比如「装备」这个超类有「武器」、「护甲」两个子类。「装备」所共有的特征写在超类中，而子类里则编写了「武器」和「防具」的不同点。</p>
 <h2><a name="instance">生成实例</a></h2>
 <p>由类生成实例（对象），大体上分为两种方法。</p>
 <p>第一种方法是使用<strong>字面量</strong>。
