--- a/RPGVXAcecn/intro/112_class.html
+++ b/RPGVXAcecn/intro/112_class.html
@@ -14,7 +14,7 @@
   <li><a href="#instance">实例变量</a></li>
   <li><a href="#accessor">accessor 的定义</a></li>
   <li><a href="#initialize">对象初始化</a></li>
-  <li><a href="#override">方法的重载</a></li>
+  <li><a href="#override">方法的覆盖</a></li>
 </ul>
 <p>基础篇的最后，让我们来学习定义新类的方法。</p>
 <h2><a name="define">类的定义</a></h2>
@@ -28,25 +28,27 @@
 <p>类定义的话这样就行了。
 但现在只是个「什么都没有的类」，让我们再来进行以下操作。</p>
 <pre>alex = Person.new<br></pre>
-<p>这样就作成一个 Person 类的实例。</p>
+<p>这样就生成了一个 Person 类的实例。</p>
 <p>想要指定超类也很简单。
-比如，定义继承于超类 Monkey 类的  Person 类可以如下操作。</p>
-<pre>class Person &lt; Monkey<br>end<br></pre>
+比如，定义继承于超类 Person 类的 Man 类可以如下操作。</p>
+<pre>
+class Man &lt; Person
+end
+</pre>
 <h2><a name="method">方法的定义</a></h2>
 <p>方法的定义，和定义普通函数的情况相同。
-如果在类定义当中加上 def ～ end 的话，就会自动成为该类的方法。</p>
+如果在类定义当中加上 def ~ end 的话，就会自动成为该类的方法。</p>
 <pre>class Person<br>  def hello<br>    print "您好"<br>  end<br>end<br></pre>
 <p>这样，就定义了调用后会显示「您好」字符串的 hello 方法。再进行如下操作。</p>
 <p>
 </p>
 <pre>alex = Person.new<br>alex.hello                  # =&gt; 您好<br></pre>
 <p>这样就能调用 hello 方法了。</p>
-<p>なお、ここでは詳しくは解説しませんが、Ruby で関数と呼んでいるもの
-は「どこからでも呼び出せる形のメソッド」に相違ありません。</p>
+<p>此外，Ruby 中称为函数的东西，事实上就是「任何地方都能调用的方法」。这里不作详细解说。</p>
 <h2><a name="instance">实例变量</a></h2>
 <p>属于个体对象的变量称为<strong>实例变量</strong>。
 名称以 @ 开头的变量，自动作为实例变量使用。
-局部变量只有在 def ～ end 等结构内部使用时才有效，
+局部变量只有在 def ~ end 等结构内部使用时才有效，
 然而使用实例变量的话，只要其对象存在，变量的值就会被保存。
 实例变量一般作为对象的属性来使用。</p>
 <pre>class Person<br>  def name<br>    return @name<br>  end<br>  def name=(name)<br>    @name = name<br>  end<br>  def hello<br>    print "我是" + @name<br>  end<br>end<br><br>alex = Person.new<br>alex.name = "阿莱库斯"<br>alex.hello                  # =&gt; 我是阿莱库斯<br></pre>
@@ -83,21 +85,23 @@
 <p>从第二行开始的 initialize 方法的定义，
 表示实例变量 @name 的初始值被赋值为字符串 "游客"。
 这样，生成新的 Person 对象的时候，会自动以 "游客" 初始化实例变量。</p>
-<p>initialize 方法中设定有临时参数的情况下，new 会取该参数为初始值。</p>
+<p>initialize 方法中设定有形式参数的情况下，new 会取该参数为初始值。</p>
 <pre>class Person<br>  def initialize(name)<br>    @name = name<br>  end<br>end<br><br>alex = Person.new("阿莱库斯")<br></pre>
-<p>上述示例中，initialize 方法里设定有临时参数 name，
+<p>上述示例中，initialize 方法里设定有形式参数 name，
 那么实例变量 @name 的初始值就会使用该参数。
-参数 name 实际在 Person 类 new 时给予。
+参数 name 实际在 Person 类 new 时传递。
 最后一行，生成 Person 类对象时指定参数为 "阿莱库斯"，
 那么 @name 的初始值也就设定为 "阿莱库斯"。</p>
-<h2><a name="override">方法的重载</a></h2>
-<p>超类中已定义的方法在子类中再次被定义称为<strong>重载</strong>。
+<h2><a name="override">方法的覆盖</a></h2>
+<p>超类中已定义的方法在子类中再次被定义称为<strong>覆盖</strong>。
 在子类方法中调用超类相同方法的情况下，要使用关键词 <strong>super</strong>。</p>
 <pre>class Hahaha<br>  def laugh(x)<br>    return "哈" * x<br>  end<br>end<br><br>class Wahaha &lt; Hahaha<br>  def laugh(x)<br>    return "哇" + super<br>  end<br>end<br><br>man = Wahaha.new<br>p man.laugh(4)      # =&gt; "哇哈哈哈哈"<br></pre>
 <p>上述示例是，对新建实例调用 Wahaha 类的 laugh 方法，
 其中 super 能调用其超类 Hahaha 类的 laugh 方法。
 那么，最后一行调用 laugh 方法可以理解为 "哇" + "哈" * 4，
 于是输出结果就为 "哇哈哈哈哈"。</p>
+<p>我们已经把使用脚本需要的基础知识走马观花地讲解了一遍。
+接下来，就去挑战预设脚本的解读吧。</p>
 <h6></h6>
 </body>
 </html>
