--- a/RPGVXAcecn/intro/102_number.html
+++ b/RPGVXAcecn/intro/102_number.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<title>数値の計算</title>
+<title>数值的计算</title>
 <link href="../style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
