--- a/RPGVXAcecn/rpgvxace/index.html
+++ b/RPGVXAcecn/rpgvxace/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<div STYLE="display: none"><img src="../img/back.png"></div>
+
 <div align="center">
   <h3><img src="img/vx%20ace_logo.png" alt="RPG¥Ä¥¯©`¥ëVX Ace"><br>
       <strong>RPG Maker VX Ace °ïÖúÎÄµµ</strong>
