--- a/RPGVXAcecn/rpgvxace/3270_db_enemy.html
+++ b/RPGVXAcecn/rpgvxace/3270_db_enemy.html
@@ -22,7 +22,7 @@
 
 <dt>●战斗图</dt>
 <dd>
-  <p>敌人在战斗中显示的图片。双击可以打开[战斗图]窗口指定一张图片。指定时，滑动[色相]条可以更改图片的色调。选择[（无）]的话，敌人不会显示图片。</p>
+  <p>敌人在战斗中显示的图片。双击可以打开[战斗图]窗口指定一张图片。指定时，滑动[色调]条可以更改图片的色调。选择[（无）]的话，敌人不会显示图片。</p>
 </dd>
 
 <dt>●体力上限/魔力上限/物理攻击/物理防御/魔法攻击/魔法防御/敏捷值/幸运值</dt>
