fix some errors

--- a/RPGVXAcecn/rgss/gm_input.html
+++ b/RPGVXAcecn/rgss/gm_input.html
@@ -16,29 +16,29 @@ type=text/css href="../style.css">
   <DT>Input.press?(<VAR>sym</VAR>) <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
   <P>检测与被参数 sym 指定的符号相对应的按键是否被按下。</P>
-  <P>如果按键被按下，则返回 TRUE ，否则返回 FALSE 。</P><PRE>if Input.press?(:C)
+  <P>如果按键被按下，则返回 true ，否则返回 false 。</P><PRE>if Input.press?(:C)
   do_something
 end
 </PRE>
   <DT>Input.trigger?(<VAR>sym</VAR>) <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
-  <P>检测被参数 sym 指定的符号相对应的按键是否正在被再次按下。</P>
-  <P>再次按下是指在按键尚未被完全松开的时候再次按下（即在极短时间内连续按下）。</P>
-  <P>如果按钮被再次按下，则返回 TRUE，如果不是，返回 FALSE 。</P>
+  <P>检测被参数 sym 指定的符号相对应的按键是否被重新按下。</P>
+  <P>从没有按下的状态转变为按下的瞬间才被视为「重新按下」。</P>
+  <P>如果按钮被重新按下，则返回 true，如果不是，返回 false 。</P>
   <DT>Input.repeat?(<VAR>sym</VAR>) <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
-  <P>检测被参数 sym 指定的符号相对应的按键是否正在被再次按下。</P>
-  <P>不同于 trigger? 函数这里的再次按下是指在短时间内第二次按下后持续一定时间后再松开。</P>
-  <P>如果按钮被再次按下，则返回 TRUE，如果不是，返回 FALSE 。</P>
+  <P>检测被参数 sym 指定的符号相对应的按键是否被重新按下。</P>
+  <P>不同于 trigger? ，按住按键时会考虑按键的重复。</P>
+  <P>如果按钮被按下，则返回 true，如果不是，返回 false 。</P>
   <DT>Input.dir4
   <DD>
   <P>判断箭头键的状态，将信息转换成特殊的 4 方向形式，并返回与数字键盘方向对应的数字（2、4、6、8）。</P>
-  <P>若无任何箭头键（或任何相对应的按键）按下，则返回 0。</P>
+  <P>若无任何箭头键（或等价于没有箭头键按下的情况时）按下，则返回 0。</P>
   <DT>Input.dir8
   <DD>
   <P>判断箭头键的状态，将信息转换成特殊的 8 方向形式，并返回与数字键盘方向对应的数字（1、2、3、4、6、7、8、9）。</P>
   <DD>
-  <P>若无任何箭头键（或任何相对应的按键）按下，则返回 0。</P></DD></DL>
+  <P>若无任何箭头键（或等价于没有箭头键按下的情况时）按下，则返回 0。</P></DD></DL>
 <H2>常量</H2>
 <DL>
   <P>这些被指定的名字被用于符号的名称。比如，方向键中的右键可以被表示为 :RIGHT。 <SPAN
