--- a/RPGVXAcecn/rgss/sc_object.html
+++ b/RPGVXAcecn/rgss/sc_object.html
@@ -36,14 +36,14 @@ type=text/css href="../style.css">
   <P>则通常都会成立。</P>
   <P>若是尝试复制&nbsp;true、false、nil、<A href="sc_numeric.html">Numeric 数字</A>、 <A
   href="sc_symbol.html">Symbol 符号</A>&nbsp;之类的对象则会抛出 <A
-  href="s_exceptions.html#TypeError">TypeError型错误）</A>&nbsp;。</P>
+  href="s_exceptions.html#TypeError">TypeError</A>&nbsp;异常。</P>
   <DT>equal?(<VAR>other</VAR>)
   <DD>
   <P>当&nbsp;<VAR>other</VAR> 是 <VAR>self</VAR> 时，返回 true。此方法不可以被重新定义。</P>
   <DT>freeze
   <DD>
   <P>冻结对象，即禁止改动对象的内容，若是修改冻结对象会抛出 <A
-  href="s_exceptions.html#TypeError">TypeError型错误）</A>&nbsp;。</P>
+  href="s_exceptions.html#TypeError">TypeError</A>&nbsp;异常。</P>
   <DT>frozen?
   <DD>
   <P>若是对象被冻结则返回 true。</P>
