--- a/RPGVXAcecn/rgss/sc_string.html
+++ b/RPGVXAcecn/rgss/sc_string.html
@@ -49,7 +49,7 @@ type=text/css href="../style.css">
   <DD>
   <P>第一个匹配 <VAR>regexp</VAR> 的子字符串替换为 <VAR>val</VAR> 字符串。</P>
   <P>若匹配失败，抛出 <A
-  href="s_exceptions.html#IndexError">IndexError（异常：索引错误）</A>&nbsp;异常。</P>
+  href="s_exceptions.html#IndexError">IndexError</A>&nbsp;异常。</P>
   <P>返回&nbsp;<VAR>val&nbsp;。</VAR></P>
   <DT>clone
   <DT>dup
@@ -144,7 +144,7 @@ p "abcde".scan(/./)
   <P>与 <A href="#L001390">gsub</A>&nbsp;相同，但是 sub 只会匹配一次。 </P>
   <DT>to_f
   <DD>
-  <P>将字符串视为 10 进制的表达式并转换成浮点数（<A href="sc_float.html">Float）</A>。</P>
+  <P>将字符串视为 10 进制的表达式并转换成浮点数（<A href="sc_float.html">Float</A>）。</P>
   <DT>to_i([<VAR>base</VAR>])
   <DD>
   <P>将字符串视为数值表达式并转换成整数。</P>
