--- a/RPGVXAcecn/rgss/gc_bitmap.html
+++ b/RPGVXAcecn/rgss/gc_bitmap.html
@@ -13,100 +13,100 @@ type=text/css href="../style.css">
   <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>类方法</H2>
 <DL>
-  <DT><A name=new>Bitmap.new(<VAR>filename</VAR>)</A> 
+  <DT><A name=new>Bitmap.new(<VAR>filename</VAR>)</A>
   <DD>
   <P>载入由 filename 参数所指定的图像，并生成一个对应的位图类对象。</P>
   <P>函数会自动搜索 <A href="rgss.html#rgss_rtp">RGSS-RTP</A>&nbsp;和 <A
   href="rgss.html#encryption_archive">加密档案</A>&nbsp;中的文件，并且扩展名可以省略。</P>
-  <DT>Bitmap.new(<VAR>width</VAR>, <VAR>height</VAR>) 
+  <DT>Bitmap.new(<VAR>width</VAR>, <VAR>height</VAR>)
   <DD>
   <P>生成指定大小的位图对象。</P></DD></DL>
 <H2>方法</H2>
 <DL>
-  <DT><A name=dispose>dispose</A> 
+  <DT><A name=dispose>dispose</A>
   <DD>
   <P>释放位图，若位图已释放，则什么都不做。</P>
-  <DT>disposed? 
+  <DT>disposed?
   <DD>
   <P>如果位图已释放，则返回 true 。</P>
-  <DT>width 
+  <DT>width
   <DD>
   <P>获取位图的宽度。</P>
-  <DT>height 
+  <DT>height
   <DD>
   <P>获取位图的高度。</P>
-  <DT>rect 
+  <DT>rect
   <DD>
   <P>获取位图矩形（ <A href="gc_rect.html">Rect</A>&nbsp;）。</P>
   <DT>blt(<VAR>x</VAR>, <VAR>y</VAR>, <VAR>src_bitmap</VAR>,
-  <VAR>src_rect</VAR>[, <VAR>opacity</VAR>]) 
+  <VAR>src_rect</VAR>[, <VAR>opacity</VAR>])
   <DD>
   <P>执行从位图 <VAR>src_bitmap</VAR> 的矩形 <VAR>src_rect&nbsp;
   </VAR>(<A href="gc_rect.html">Rect</A>&nbsp;) 到指定的位图坐标 (<VAR>x</VAR>, <VAR>y</VAR>) 之间的区块过渡。</P>
   <P><VAR>opacity</VAR> 是透明度，范围 0～255。</P>
   <DT>stretch_blt(<VAR>dest_rect</VAR>, <VAR>src_bitmap</VAR>,
-  <VAR>src_rect</VAR>[, <VAR>opacity</VAR>]) 
+  <VAR>src_rect</VAR>[, <VAR>opacity</VAR>])
   <DD>
   <P>执行从位图 <VAR>src_bitmap</VAR> 的矩形
   <VAR>src_rec</VAR>t（<A href="gc_rect.html">Rect</A>&nbsp;）带指定的位图目标矩形 <VAR>dest_rect</VAR>（<A
   href="gc_rect.html">Rect</A>&nbsp;）之间的区块过渡。</P>
   <P><VAR>opacity</VAR> 是透明度，范围 0～255。</P>
   <DT>fill_rect(<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>,
-  <VAR>height</VAR>, <VAR>color</VAR>) 
-  <DT>fill_rect(<VAR>rect</VAR>, <VAR>color</VAR>) 
+  <VAR>height</VAR>, <VAR>color</VAR>)
+  <DT>fill_rect(<VAR>rect</VAR>, <VAR>color</VAR>)
   <DD>
   <P>将位图区域 (<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>,
   <VAR>height</VAR>) 或矩形（<A href="gc_rect.html">Rect</A>&nbsp;）填满指定的颜色 <VAR>color</VAR> （<A
   href="gc_color.html">Color</A>&nbsp;）。</P>
   <DT>gradient_fill_rect(<VAR>x</VAR>, <VAR>y</VAR>,
   <VAR>width</VAR>, <VAR>height</VAR>, <VAR>color1</VAR>, <VAR>color2</VAR>[,
-  <VAR>vertical</VAR>]) 
+  <VAR>vertical</VAR>])
   <DT>gradient_fill_rect(<VAR>rect</VAR>, <VAR>color1</VAR>,
-  <VAR>color2</VAR>[, <VAR>vertical</VAR>]) 
+  <VAR>color2</VAR>[, <VAR>vertical</VAR>])
   <DD>
   <P>将位图区域 (<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>,
   <VAR>height</VAR>) 或矩形（<A href="gc_rect.html">Rect</A>&nbsp;) 填满从颜色 <VAR>color</VAR>1（<A href="gc_color.html">Color</A>&nbsp;) 至<VAR>
   color2</VAR>（<A href="rgss/gc_color.html">Color</A>&nbsp;）的渐层色彩。</P>
   <P>将 <VAR>vertical</VAR> 设为 true 生成纵向的渐层色彩，预设为横向渐层。</P>
-  <DT>clear 
+  <DT>clear
   <DD>
   <P>清除整个位图。</P>
   <DT>clear_rect(<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>,
-  <VAR>height</VAR>) 
-  <DT>clear_rect(<VAR>rect</VAR>) 
+  <VAR>height</VAR>)
+  <DT>clear_rect(<VAR>rect</VAR>)
   <DD>
   <P>清除位图区域 (<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>,
   <VAR>height</VAR>) 或矩形 <VAR>rect</VAR> （<A
   href="rgss/gc_rect.html">Rect</A> )
   。</P>
-  <DT>get_pixel(<VAR>x</VAR>, <VAR>y</VAR>) 
+  <DT>get_pixel(<VAR>x</VAR>, <VAR>y</VAR>)
   <DD>
   <P>获取指定像素点 (<VAR>x</VAR>, <VAR>y</VAR>) 的色彩（<A
   href="rgss/gc_color.html">Color</A>
   )。</P>
   <DT>set_pixel(<VAR>x</VAR>, <VAR>y</VAR>, <VAR>color</VAR>)
-  
+
   <DD>
   <P>设定指定像素点 (<VAR>x</VAR>, <VAR>y</VAR>) 的色彩（<A
   href="rgss/gc_color.html">Color</A>
   )。</P>
-  <DT>hue_change(<VAR>hue</VAR>) 
+  <DT>hue_change(<VAR>hue</VAR>)
   <DD>
   <P>在 360 度内变换位图的色相。</P>
   <P>此处理需要花费时间，另外色彩转换的误差，反复转换可能会导致色彩损失。</P>
-  <DT>blur 
+  <DT>blur
   <DD>
   <P>对位图执行模糊效果。此处理需要花费时间。</P>
-  <DT>radial_blur(<VAR>angle</VAR>, <VAR>division</VAR>) 
+  <DT>radial_blur(<VAR>angle</VAR>, <VAR>division</VAR>)
   <DD>
   <P>对位图执行放射型模糊。<VAR>angle</VAR> 指定 0～360
   的角度，角度愈大，效果愈圆润。</P>
   <P><VAR>division</VAR> 指定 2～100
   的分界数，分界数愈大，效果愈平滑。此处理需要花费大量时间。</P>
   <DT>draw_text(<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>,
-  <VAR>height</VAR>, <VAR>str</VAR>[, <VAR>align</VAR>]) 
+  <VAR>height</VAR>, <VAR>str</VAR>[, <VAR>align</VAR>])
   <DT>draw_text(<VAR>rect</VAR>, <VAR>str</VAR>[,
-  <VAR>align</VAR>]) 
+  <VAR>align</VAR>])
   <DD>
   <P>在位图区域 (<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>,
   <VAR>height</VAR>) 或矩形 <VAR>rect</VAR>&nbsp;（<A
@@ -119,8 +119,8 @@ type=text/css href="../style.css">
   <DD>
   <P>文字的横向对齐方式预设为靠左对齐，可以设置 <VAR>align</VAR> 为 1 居中对齐，或设置为 2
   靠右对齐。纵向则必定是总是居中对齐。</P>
-  <P>此处理需要花费时间，因此不建议每画格重绘一次文字。</P>
-  <DT>text_size(<VAR>str</VAR>) 
+  <P>此处理需要花费时间，因此不建议每帧重绘一次文字。</P>
+  <DT>text_size(<VAR>str</VAR>)
   <DD>
   <P>获取使用 draw_text 方法描绘 str 字符串时所需要的区域（<A
   href="rgss/gc_rect.html">Rect</A> )
@@ -129,7 +129,7 @@ type=text/css href="../style.css">
   方法转换成字符串。</P></DD></DL>
 <H2>属性</H2>
 <DL>
-  <DT>font 
+  <DT>font
   <DD>
   <P>使用draw_text方法描绘字符串时所使用的字体。（<A
   href="gc_font.html">Font</A>&nbsp;）。</P></DD></DL>
